add new contributor

--- a/AUTHORS
+++ b/AUTHORS
@@ -4,3 +4,4 @@ The following individuals have contributed to this project:
 * Rob Hudson
 * James Turk
 * Greg Taylor <gtaylor@duointeractive.com>
+* Jonathan Drosdeck
