add Peter Sanchez to authors

--- a/AUTHORS
+++ b/AUTHORS
@@ -4,4 +4,5 @@ The following individuals have contributed to this project:
 * Rob Hudson
 * James Turk
 * Greg Taylor <gtaylor@duointeractive.com>
+* Peter Sanchez
 * Jonathan Drosdeck
