document cloud files backend, rename it, and add supports_gzip method to client

--- a/AUTHORS
+++ b/AUTHORS
@@ -6,3 +6,4 @@ The following individuals have contributed to this project:
 * Greg Taylor <gtaylor@duointeractive.com>
 * Peter Sanchez
 * Jonathan Drosdeck
+* Rich Leland
