Added email address

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,7 +1,7 @@
 The following individuals have contributed to this project:
 
 * Jeremy Carbaugh <jcarbaugh@gmail.com>
-* Rob Hudson
+* Rob Hudson <rob@cogit8.org>
 * James Turk
 * Greg Taylor <gtaylor@duointeractive.com>
 * Peter Sanchez
