--- a/AUTHORS
+++ b/AUTHORS
@@ -5,5 +5,6 @@ The following individuals have contributed to this project:
 * James Turk
 * Greg Taylor <gtaylor@duointeractive.com>
 * Peter Sanchez
+* Kenneth Reitz <me@kennethreitz.com>
 * Jonathan Drosdeck
 * Rich Leland
